--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,12 @@ h1 {
     width: 100%;
     height: 100%;
 }
-
+#solgan h2{
+    font-size: 30px;
+    font-weight: 600;
+}
 .inner_solgan {
+    width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
@@ -298,12 +302,14 @@ h1 {
 #section1 ul li p {
     margin-top: 20px;
     font-size: 18px;
+    font-weight: 500;
 }
 
 #section1 ul li p span {
     display: inline-block;
     margin-bottom: 7px;
     font-size: 14px;
+    font-weight: 400;
     color: #9F9F9F;
 }
 
@@ -327,8 +333,14 @@ h1 {
     margin-top: 5px;
     font-weight: 600;
 }
-
+.price strong{
+    display: inline-block;
+    font-weight: 600;
+}
 .price span {
+    font-size: 14px;
+    font-weight: 500;
+    color: #9F9F9F;
     text-decoration-line: line-through;
 }
 
@@ -460,6 +472,7 @@ h1 {
 
 .product_ p {
     margin-top: 25px;
+    font-weight: 500;
 }
 
 
@@ -528,8 +541,9 @@ p.address {
 .item .green {
     display: block;
     color: #077561;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 21px;
+    line-height: 1.1
 }
 
 .item img {
@@ -734,6 +748,7 @@ p.address {
 
 .inner_section5 ul li span {
     font-size: 17px;
+    
 }
 
 #section6 {
@@ -863,7 +878,7 @@ p.address {
 .store_offline a p {
     font-size: 18px;
     color: #077561;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .store_offline a>span {
@@ -888,7 +903,7 @@ p.address {
 .oliveyoung a p {
     font-size: 18px;
     color: #077561;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .oliveyoung a>span {
